--- a/app/src/main/res/layout/translator.xml
+++ b/app/src/main/res/layout/translator.xml
@@ -70,7 +70,7 @@
         android:background="@android:color/transparent"
         android:layout_width="@dimen/zero"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
