--- a/app/src/main/res/layout-land/translator.xml
+++ b/app/src/main/res/layout-land/translator.xml
@@ -23,7 +23,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/swapLanguage"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/semi_margin"
         app:layout_constraintBottom_toTopOf="@+id/spinnersBottom" />
 
     <Spinner
@@ -43,7 +43,7 @@
         app:layout_constraintLeft_toRightOf="@+id/swapLanguage"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/semi_margin"
         app:layout_constraintBottom_toTopOf="@+id/spinnersBottom" />
 
     <Button
@@ -65,9 +65,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/verticalCenter"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="296dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="296dp" />
+        app:layout_constraintGuide_percent="0.5" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
